--- a/assets/css/single_article.css
+++ b/assets/css/single_article.css
@@ -19,6 +19,15 @@ article, section {
 .introduction {
     margin: 30px 0;
 }
+#article-content pre {
+    background-color: var(--eerie-black);
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+}
+#article-content code {
+    color: var(--code-color);
+}
 .taglist {
     margin: unset;
 }
