--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@
     --white: #ffffff;
     --blue-icon: #0087db;
     --green-icon: #00db3e;
-    --red-icon: #f42804
+    --red-icon: #f42804;
+    --code-color: #13c156;
 }
 ::selection {
     background-color: var(--carrot-orange);
