--- a/templates/_partials/_comment.html.twig
+++ b/templates/_partials/_comment.html.twig
@@ -16,7 +16,7 @@
 			</span> #}
 		</div>
 		{% if comment.modified == true %}
-			<p class="modified">Modifié</p>
+			<p class="modified">Modified</p>
 		{% endif %}
 	</div>
 </li>
