--- a/templates/admin/new-article.html.twig
+++ b/templates/admin/new-article.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Créer article
+{% block title %}Create article
 {% endblock %}
 {% block stylesheets %}
 	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
@@ -13,12 +13,10 @@
 	<script defer src="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.js"></script>
 	<script>
 		$(document).ready(function () {$('.js-example-basic-multiple').select2({closeOnSelect: false});
-        // Initialisation de Quill pour l'éditeur de contenu
         var quill = new Quill('#editor', {
             theme: 'snow'
         });
 
-        // Lors de l'envoi du formulaire, on passe le contenu de l'éditeur dans le champ caché
         var form = document.querySelector('#article-form');
 		form.onsubmit = function() {
 			var contentInput = document.querySelector("input[id='article_content'");
@@ -47,10 +45,8 @@
             label: 'Image'
         }) }}
 
-		    <!-- Div pour l'éditeur Quill -->
     <div id="editor" class="form-control mt-2 mb-4" style="height: 300px;"></div>
 
-    <!-- Champ caché pour stocker le contenu HTML -->
     {{ form_widget(article_form.content) }}
 	{# {{ form_row(article_form.content, {
             'attr': {'class': 'form-control mt-2 mb-4'},
