--- a/templates/blog/article.html.twig
+++ b/templates/blog/article.html.twig
@@ -36,7 +36,7 @@
 
 		<section id="other-articles">
 			<div class="responsive-h2">
-				<h2>Autres articles :</h2>
+				<h2>Other articles :</h2>
 			</div>
 			<div id="article-container">
 				{% for article in other_articles %}
@@ -56,7 +56,7 @@
 				label: false
 			}) }}
 			{{ form_widget(comment_form._token) }}
-			<button type="submit" class="btn btn-lg btn-primary form-confirm">Commenter</button>
+			<button type="submit" class="btn btn-lg btn-primary form-confirm">Comment</button>
 			{{ form_end(comment_form) }}
 
 			<div class="responsive-h2">
