--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -12,8 +12,8 @@
 
 {% block body %}
 <section>
-<a href="{{ path('app_admin') }}" id="admin_menu_link"><i class="bi bi-caret-left-fill"></i> Retour au menu admin</a>
-    <h1>Commentaires</h1>
+<a href="{{ path('app_admin') }}" id="admin_menu_link"><i class="bi bi-caret-left-fill"></i> Back to admin menu</a>
+    <h1>Comments</h1>
 
     <table data-toggle="table" data-pagination="true" data-search="true">
         <thead>
