--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexion{% endblock %}
+{% block title %}Sign in{% endblock %}
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/regilog_form.css') }}">
 {% endblock %}
@@ -13,11 +13,11 @@
 
     {% if app.user %}
         <div class="mb-3">
-            Vous êtes connecté : {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
+            Logged in as : {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Log out</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mt-2 mb-4" autocomplete="email" required autofocus>
     <label for="inputPassword">Mot de passe</label>
@@ -28,8 +28,8 @@
     >
 
     <button class="btn btn-lg btn-primary form-confirm" type="submit">
-        Connexion
+        Sign in
     </button>
 </form>
-<p id="regilog">Pas de compte ? <a href="{{ path('app_register') }}">S'inscrire</a></p>
+<p id="regilog">No account yet ? <a href="{{ path('app_register') }}">Register</a></p>
 {% endblock %}
