--- a/templates/tag/_form.html.twig
+++ b/templates/tag/_form.html.twig
@@ -3,7 +3,7 @@
 {{ form_start(form) }}
     	{{ form_row(form.name, {
             'attr': {'class': 'form-control mt-2 mb-4'},
-            label: 'Nom du tag'
+            label: 'Tag name'
         }) }}
-    <button class="btn new-data-btn">{{ button_label|default('Confirmer') }}</button>
+    <button class="btn new-data-btn">{{ button_label|default('Confirm') }}</button>
 {{ form_end(form) }}
