--- a/templates/tag/index.html.twig
+++ b/templates/tag/index.html.twig
@@ -13,7 +13,7 @@
 
 {% block body %}
 	<section>
-    <a href="{{ path('app_admin') }}" id="admin_menu_link"><i class="bi bi-caret-left-fill"></i> Retour au menu admin</a>
+    <a href="{{ path('app_admin') }}" id="admin_menu_link"><i class="bi bi-caret-left-fill"></i> Back to admin menu</a>
 		<h1>Tags</h1>
 
 		<table data-toggle="table" data-pagination="true" data-search="true">
