--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouvel utilisateur
+{% block title %}New utilisateur
 {% endblock %}
 {% block stylesheets %}
 	<link rel="stylesheet" href="{{ asset('css/admin.css') }}">
@@ -10,15 +10,15 @@
 	<section class="mb-3">
 		<a href="{{ path('app_user_index') }}" id="admin_menu_link">
 			<i class="bi bi-caret-left-fill"></i>
-			Retour aux utilisateurs</a>
-		<h1>Créer un utilisateur</h1>
+			Back to user list</a>
+		<h1>Create a user</h1>
 
 		{# {{ include('user/_form.html.twig') }} #}
 
 		{{ form_start(form) }}
 		{{ form_row(form.nickname, {
             'attr': {'class': 'form-control mt-2 mb-4'},
-            label: 'Pseudo'
+            label: 'Nickname'
         }) }}
 		{{ form_row(form.email, {
             'attr': {'class': 'form-control mt-2 mb-4'},
@@ -26,13 +26,13 @@
         }) }}
 		{{ form_row(form.password, {
             'attr': {'class': 'form-control mt-2 mb-4'},
-            label: 'Mot de passe'
+            label: 'MPassword'
         }) }}
 		{{ form_row(form.roles, {
             'attr': {'class': 'form-control mt-2 mb-4'},
             label: 'Roles'
         }) }}
-		<button class="btn new-data-btn mb-5">{{ button_label|default('Confirmer') }}</button>
+		<button class="btn new-data-btn mb-5">{{ button_label|default('Confirm') }}</button>
 		{{ form_end(form) }}
 	</section>
 
