--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Inscription
+{% block title %}Register
 {% endblock %}
 {% block stylesheets %}
 	<link rel="stylesheet" href="{{ asset('css/regilog_form.css') }}">
@@ -11,7 +11,7 @@
 	{{ form_start(registrationForm, {
             'attr': {'id': 'regilog-form'}
         }) }}
-	<h1 class="h3 mb-3 font-weight-normal">Inscription</h1>
+	<h1 class="h3 mb-3 font-weight-normal">Register</h1>
 	{{ form_row(registrationForm.email, {
             'attr': {'class': 'form-control mt-2 mb-4'},
             label: 'Email'
@@ -25,7 +25,7 @@
             label: 'Mot de passe'
         }) }}
 
-	<button type="submit" class="btn btn-lg btn-primary form-confirm">Confirmer</button>
+	<button type="submit" class="btn btn-lg btn-primary form-confirm">Confirm</button>
 	{{ form_end(registrationForm) }}
-    <p id="regilog">Déjà un compte ? <a href="{{ path('app_login') }}">Se connecter</a></p>
+    <p id="regilog">Already have an account ?<a href="{{ path('app_login') }}">Sign in</a></p>
 {% endblock %}
