--- a/templates/tag/_delete_form.html.twig
+++ b/templates/tag/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_tag_delete', {'id': tag.id}) }}" onsubmit="return confirm('Voulez vous supprimer le tag {{tag.name}} ?');">
+<form method="post" action="{{ path('app_tag_delete', {'id': tag.id}) }}" onsubmit="return confirm('Delete the tag {{tag.name}} ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ tag.id) }}">
     <button class="btn" id="delete-data-btn"><i class="bi bi-trash3-fill delete-data-icon"></i></button>
 </form>
