--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Utilisateur
+{% block title %}User
 {% endblock %}
 {% block stylesheets %}
 	<link rel="stylesheet" href="{{ asset('css/admin.css') }}">
@@ -10,13 +10,13 @@
 	<section class="mb-3">
 		<a href="{{ path('app_user_index') }}" id="admin_menu_link">
 			<i class="bi bi-caret-left-fill"></i>
-			Retour aux utilisateurs</a>
+			Back to user list</a>
 		<h1>{{ user.nickname }}</h1>
 
 		<table class="table">
 			<tbody>
 				<tr>
-					<th>Pseudo</th>
+					<th>Nickname</th>
 					<td>{{ user.nickname }}</td>
 				</tr>
 				<tr>
@@ -32,11 +32,11 @@
 					</td>
 				</tr>
 				<tr>
-					<th>Membre depuis</th>
+					<th>Member since</th>
 					<td>{{ user.createdAt ? user.createdAt|date('d/m/Y') : '' }}</td>
 				</tr>
 			</tbody>
 		</table>
 	</section>
-	<a href="{{ path('app_user_edit', {'id': user.id}) }}" class="new-data-btn mb-5">Modifier</a>
+	<a href="{{ path('app_user_edit', {'id': user.id}) }}" class="new-data-btn mb-5">Edit</a>
 {% endblock %}
