--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -18,9 +18,9 @@
     <table data-toggle="table" data-pagination="true" data-search="true">
         <thead>
             <tr>
-                <th>Auteur</th>
-                <th>Posté le</th>
-                <th>Contenu</th>
+                <th>Author</th>
+                <th>Posted on</th>
+                <th>Content</th>
                 <th>Actions</th>
             </tr>
         </thead>
