--- a/templates/blog/article.html.twig
+++ b/templates/blog/article.html.twig
@@ -5,6 +5,7 @@
 {% endblock %}
 {% block stylesheets %}
 	<link rel="stylesheet" href="{{ asset('css/single_article.css') }}">
+	<script defer src="{{ asset('js/like.js') }}"></script>
 {% endblock %}
 
 {% block body %}
@@ -20,8 +21,8 @@
 				<p class="article-date">Publié le :
 					{{ article.createdAt|date("d/m/Y") }}</p>
 				<div class="article-reaction-container">
-					<span>
-						<i class="bi bi-hand-thumbs-up"></i>
+					<span  class="like-btn" data-article-id="{{ article.id }}" data-csrf="{{ csrf_token('like_article') }}">
+						<i class="bi bi-hand-thumbs-up{% if app.user and app.user.getLikedArticles().contains(article) %}-fill liked-icon{% endif %}" data-id="{{ article.id }}"></i>
 						<p>{{ article.likes|length }}</p>
 					</span>
 					<span>
