feat: my lied articles OK

--- a/templates/_partials/widgets/_toasts.html.twig
+++ b/templates/_partials/widgets/_toasts.html.twig
@@ -9,7 +9,7 @@
 							<i class="path1"></i>
 							<i class="path2"></i>
 						</i>
-						<strong class="me-auto text-white">Succès</strong>
+						<strong class="me-auto text-white">Success</strong>
 					{% elseif label == 'primary' %}
 						<i class="ki-duotone ki-information-5 fs-1 me-2 text-white">
 							<i class="path1"></i>
@@ -22,14 +22,14 @@
 							<i class="path1"></i>
 							<i class="path2"></i>
 						</i>
-						<strong class="me-auto text-white">Erreur</strong>
+						<strong class="me-auto text-white">Error</strong>
 					{% elseif label == 'warning' %}
 						<i class="ki-duotone ki-information-5 fs-1 me-2 text-white">
 							<i class="path1"></i>
 							<i class="path2"></i>
 							<i class="path3"></i>
 						</i>
-						<strong class="me-auto text-white">Alerte</strong>
+						<strong class="me-auto text-white">Alert</strong>
 					{% else %}
 						<i class="ki-duotone ki-dots-circle fs-1 me-2 text-white">
 							<i class="path1"></i>
