--- a/templates/_partials/header/_header.html.twig
+++ b/templates/_partials/header/_header.html.twig
@@ -10,7 +10,7 @@
 					<a class="nav-link {% if app.request.attributes.get('tri') == 'top-articles' %}current-page{% endif %}" href="{{ path('app_blog', {'tri': 'top-articles'}) }}">Top articles</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link {% if app.request.attributes.get('tri') == 'derniers-articles' %}current-page{% endif %}" href="{{ path('app_blog', {'tri': 'derniers-articles'}) }}">Derniers articles</a>
+					<a class="nav-link {% if app.request.attributes.get('tri') == 'latest-articles' %}current-page{% endif %}" href="{{ path('app_blog', {'tri': 'latest-articles'}) }}">Latest articles</a>
 				</li>
 			</ul>
 
@@ -19,21 +19,21 @@
 				<ul id="header-dd-menu" class="dropdown-menu dropdown-menu-end">
 					{% if app.user %}
 						<li>
-							<a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
+							<a class="dropdown-item" href="{{ path('app_logout') }}">Log out</a>
 						</li>
 						<li>
-							<a class="dropdown-item" href="#">Mes articles likés</a>
+							<a class="dropdown-item" href="{{ path('app_blog', {'tri': 'my-liked-articles'}) }}">My liked articles</a>
 						</li>
 					{% else %}
 						<li>
-							<a class="dropdown-item" href="{{ path('app_login') }}">Connexion</a>
+							<a class="dropdown-item" href="{{ path('app_login') }}">Sign in</a>
 						</li>
 					{% endif %}
 					<li class="max1000">
 						<a class="dropdown-item" href="#">Top articles</a>
 					</li>
 					<li class="max1000">
-						<a class="dropdown-item" href="#">Derniers articles</a>
+						<a class="dropdown-item" href="#">Latest articles</a>
 					</li>
 					{% if is_granted('ROLE_ADMIN') %}
 						<li>
