--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -9,7 +9,7 @@
 {% block body %}
 	<ul class="nav flex-column" id="admin-menu">
 		<li class="nav-item">
-			<a class="nav-link" href="{{ path('app_new_article') }}">Create an article</a>
+			<a class="nav-link" href="{{ path('app_new_article') }}">Write an article</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="{{ path('app_admin_articles') }}">Articles</a>
