--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,10 +149,10 @@ header {
     position: relative;
     overflow: hidden;
 }
-.article-description-container::after {
-    content: ""; /* Contenu généré pour le gradient */
+.article-card-content::after {
+    content: "";
     position: absolute;
-    bottom: 0;
+    bottom: 40px;
     left: 0;
     width: 100%;
     height: 75px;
@@ -161,7 +161,7 @@ header {
 }
 .article-description {
     font-size: 0.9rem;
-    line-height: 110%;
+    line-height: 150%;
 }
 .article-reaction-container {
     display: flex;
@@ -194,8 +194,14 @@ header {
 
 @media (max-width: 1250px) {
     #article-container {
+        width: 775px;
+        justify-content: flex-start;
+    }
+}
+@media (max-width: 830px) {
+    #article-container {
         width: 95%;
-        justify-content: space-evenly;
+        justify-content: center;
     }
 }
 /* ARTICLES - ARTICLES - ARTICLES - ARTICLES - ARTICLES - ARTICLES - ARTICLES - ARTICLES - ARTICLES */
