--- a/templates/_partials/_article.html.twig
+++ b/templates/_partials/_article.html.twig
@@ -1,7 +1,7 @@
 <article class="card article-card">
 	<a href="{{ path('app_article', {id: article.id}) }}"><img src="{{ asset('img/article/' ~ article.image) }}" class="card-img-top" alt=""></a>
 	<div class="card-body article-body">
-		<div>
+		<div class="article-card-content">
 			<p class="article-date">Published on :
 				{{ article.createdAt|date("d/m/Y") }}</p>
 			<ul class="taglist">
