--- a/templates/admin/articles.html.twig
+++ b/templates/admin/articles.html.twig
@@ -13,7 +13,7 @@
 <section>
 	<a href="{{ path('app_admin') }}" id="admin_menu_link"><i class="bi bi-caret-left-fill"></i> Back to admin menu</a>
 		<h1>Articles</h1>
-	
+		<a href="{{ path('app_new_article') }}" class="new-data-btn mb-5">New article</a>
 		<table data-toggle="table" data-pagination="true" data-search="true">
 			<thead>
 				<tr>
