--- a/templates/blog/article.html.twig
+++ b/templates/blog/article.html.twig
@@ -25,10 +25,12 @@
 						<i class="bi bi-hand-thumbs-up{% if app.user and app.user.getLikedArticles().contains(article) %}-fill liked-icon{% endif %}" data-id="{{ article.id }}"></i>
 						<p>{{ article.likes|length }}</p>
 					</span>
-					<span>
-						<i class="bi bi-chat-left-text"></i>
-						<p>{{ article.comments|filter(comment => comment.isConfirmed)|length }}</p>
-					</span>
+					<a href="#comments">
+						<span class="comment-btn">
+							<i class="bi bi-chat-left-text"></i>
+							<p>{{ article.comments|filter(comment => comment.isConfirmed)|length }}</p>
+						</span>
+					</a>
 				</div>
 			</div>
 			<img src="{{ asset('img/article/' ~ article.image) }}" alt="" class="article-img">
