--- a/templates/admin/articles.html.twig
+++ b/templates/admin/articles.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block body %}
-<section>
+<section class="mb-5">
 	<a href="{{ path('app_admin') }}" id="admin_menu_link"><i class="bi bi-caret-left-fill"></i> Back to admin menu</a>
 		<h1>Articles</h1>
 		<a href="{{ path('app_new_article') }}" class="new-data-btn mb-5">New article</a>
