--- a/templates/blog/_delete_form.html.twig
+++ b/templates/blog/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_tag_delete', {'id': article.id}) }}" onsubmit="return confirm('Delete this article ?');">
+<form method="post" action="{{ path('app_article_delete', {'id': article.id}) }}" onsubmit="return confirm('Delete this article ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ article.id) }}">
     <button class="btn" id="delete-data-btn"><i class="bi bi-trash3-fill delete-data-icon"></i></button>
 </form>
