--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,7 +20,7 @@
     <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mt-2 mb-4" autocomplete="email" required autofocus>
-    <label for="inputPassword">Mot de passe</label>
+    <label for="inputPassword">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control mt-2 mb-4" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
