--- a/templates/admin/articles.html.twig
+++ b/templates/admin/articles.html.twig
@@ -7,6 +7,7 @@
 {% endblock %}
 {% block javascripts %}
 	<script defer src="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.js"></script>
+	<script defer src="{{ asset('js/articles.js') }}"></script>
 {% endblock %}
 
 {% block body %}
@@ -36,9 +37,17 @@
 						<a href="{{ path('app_article_edit', {'id': article.id}) }}">
 							<i class="bi bi-pencil-fill edit-data-icon"></i>
 						</a>
-						<button class="btn" id="delete-data-btn" data-id="{{ article.id }}" data-bs-toggle="modal" data-bs-target="#exampleModal">
+						{# <button class="btn" id="delete-data-btn" data-id="{{ article.id }}" data-bs-toggle="modal" data-bs-target="#exampleModal">
+							<i class="bi bi-trash3-fill delete-data-icon"></i>
+						</button> #}
+						<button class="btn delete-button" 
+								data-id="{{ article.id }}" 
+								data-csrf-token="{{ csrf_token('delete-item' ~ article.id) }}" 
+								data-bs-toggle="modal" 
+								data-bs-target="#exampleModal">
 							<i class="bi bi-trash3-fill delete-data-icon"></i>
 						</button>
+					</td>
 				</tr>
 			{% else %}
 				<tr>
