--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -17,7 +17,7 @@
 			<i class="bi bi-caret-left-fill"></i>
 			Back to admin menu</a>
 		<h1>Users</h1>
-
+		<a href="{{ path('app_user_new') }}" class="new-data-btn mb-5">New user</a>
 		<table data-toggle="table" data-pagination="true" data-search="true">
 			<thead>
 				<tr>
@@ -59,5 +59,4 @@
 			</tbody>
 		</table>
 	</section>
-	<a href="{{ path('app_user_new') }}" class="new-data-btn mb-5">New utilisateur</a>
 {% endblock %}
