--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,7 @@ header {
 .silver-btn:hover {
     background-color: var(--silver);
 }
+/* MODAL - MODAL - MODAL - MODAL - MODAL - MODAL - MODAL - MODAL - MODAL - MODAL - MODAL - MODAL */
 .modal-content, .modal-footer {
     background: var(--eerie-black);
 }
@@ -214,6 +215,13 @@ header {
 .modal-header h1 {
     margin: unset;
 }
+/* MODAL - MODAL - MODAL - MODAL - MODAL - MODAL - MODAL - MODAL - MODAL - MODAL - MODAL - MODAL */
+/* TOAST - TOAST - TOAST - TOAST - TOAST - TOAST - TOAST - TOAST - TOAST - TOAST - TOAST */
+.toast {
+    background-color: var(--eerie-black);
+    color: var(--silver);
+}
+/* TOAST - TOAST - TOAST - TOAST - TOAST - TOAST - TOAST - TOAST - TOAST - TOAST - TOAST */
 @media (max-width: 1250px) {
     #article-container {
         width: 775px;
