--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
 
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script defer src="{{ asset('js/bootstrap/bootstrap.bundle.min.js') }}"></script>
+        <script defer src="{{ asset('js/toast-fade.js') }}"></script>
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
@@ -25,6 +26,6 @@
             {% block body %}{% endblock %}
         </main>
 
-        <div id="toast-container" class="toast-container position-fixed top-0 end-0 p-3" style="z-index: 1000;"></div>
+        {% include "_partials/widgets/_toasts.html.twig" %}
     </body>
 </html>
