refactor: removed likes on comments

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -125,6 +125,9 @@ tr, td {
     justify-content: space-around;
     align-items: center;
 }
+.delete-button {
+    padding: 0;
+}
 .see-data-icon, .edit-data-icon, .delete-data-icon {
     color: var(--silver);
     cursor: pointer;
