--- a/templates/_partials/_comment.html.twig
+++ b/templates/_partials/_comment.html.twig
@@ -4,19 +4,19 @@
 		<p class="article-date">{{ comment.createdAt|date("d/m/Y à H:i") }}</p>
 	</div>
 	<p class="comment-text">{{ comment.content }}</p>
-	<div class="comment-like-modif">
+	{# <div class="comment-like-modif">
 		<div class="comment-likes-container">
 			<span>
 				<i class="bi bi-hand-thumbs-up"></i>
 				<p>{{ comment.likes|length }}</p>
 			</span>
-			{# <span>
+			<span>
 				<i class="bi bi-hand-thumbs-down"></i>
 				<p>{{ comment.dislikes }}</p>
-			</span> #}
+			</span>
 		</div>
 		{% if comment.modified == true %}
 			<p class="modified">Modified</p>
 		{% endif %}
-	</div>
+	</div> #}
 </li>
