--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -18,11 +18,11 @@
         }) }}
 	{{ form_row(registrationForm.nickname, {
             'attr': {'class': 'form-control mt-2 mb-4'},
-            label: 'Pseudo'
+            label: 'Username'
         }) }}
 	{{ form_row(registrationForm.plainPassword, {
             'attr': {'class': 'form-control mt-2 mb-4'},
-            label: 'Mot de passe'
+            label: 'Password'
         }) }}
 
 	<button type="submit" class="btn btn-lg btn-primary form-confirm">Confirm</button>
